--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "lint-staged": "11.1.2",
     "prettier": "2.4.1",
     "typescript": "4.4.3"
+  },
+  "dependencies": {
+    "io-ts-types": "^0.5.16",
+    "monocle-ts": "^2.3.11",
+    "newtype-ts": "^0.3.4"
   }
 }
