--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "qualtrics",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "keywords": [
     "qualtrics"
@@ -12,8 +12,10 @@
   "author": "keita-makino <kemakino@ucdavis.edu>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^28.1.7",
     "@typescript-eslint/eslint-plugin": "4.32.0",
     "@typescript-eslint/parser": "4.32.0",
+    "babel-jest": "^28.1.3",
     "csstype": "^3.0.9",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
@@ -21,8 +23,10 @@
     "fp-ts": "^2.11.4",
     "husky": "7.0.2",
     "io-ts": "^2.2.16",
+    "jest": "^28.1.3",
     "lint-staged": "11.1.2",
     "prettier": "2.4.1",
+    "ts-jest": "^28.0.8",
     "typescript": "4.4.3"
   },
   "dependencies": {
