--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target": "es2019",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "lib": ["esnext"],
     "outDir": "dist",
     "module": "commonjs",
@@ -9,5 +11,5 @@
     "sourceMap": true,
     "strictNullChecks": true
   },
-  "include": ["./src"]
+  "include": ["./src", "./tests"]
 }
